--- a/header.html
+++ b/header.html
@@ -1,3 +1,19 @@
 <?php
 session_start();
 >
+
+<aside>
+    <figure>
+        <div id="avatar"></div>
+        <figcaption>Johnny Doe</figcaption>
+    </figure>
+    <img src="images/menu.svg" class = "Menu_Bar">
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About me</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+</aside>
