--- a/newscreening.html
+++ b/newscreening.html
@@ -18,7 +18,7 @@
 <body>
 
         <form action="includes/interview.php" method="post" class="sighnup-form">
-            <h1>Tell us about yourself :)</h1> <br>
+            <h1>Add new STI Results</h1> <br>
             <hr>
             <br>
             
