--- a/clinic.htm
+++ b/clinic.htm
@@ -5,6 +5,8 @@
     <title></title>
     <link rel="stylesheet" href="clinic.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
+    <script src="https://kit.fontawesome.com/f52176a8e0.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
   </head>
 <body>
         <body>
