--- a/viewhpv.html
+++ b/viewhpv.html
@@ -71,7 +71,7 @@
             <form>
                 <h4>Dose 1: </h4>
                 <div class = "txtb">
-                    <input type="text" id="datepicker">
+                    <input type="text" name = 'date1' id="datepicker">
                     <span data-placeholder="Date Of Birth"></span>
                   </div>
                 <br>
@@ -88,7 +88,7 @@
                   </div>
                 <br>
 
-                 <input href='#' type="submit" id="button" class="logbtn" value="Edit" onclick="openModal()">
+                 <input href='#' name = 'hpv-submit' type="submit" id="button" class="logbtn" value="Edit" onclick="openModal()">
             </form>
         </div>
     </div>
