--- a/notification_test.html
+++ b/notification_test.html
@@ -8,7 +8,7 @@
     <aside>
       <figure>
           
-          <figcaption>Johnny Doe</figcaption>
+          <figcaption>Notification Tests</figcaption>
       </figure>
       <img src="images/menu.svg" class = "Menu_Bar">
       <nav>
@@ -27,20 +27,28 @@
   
   </head>
 <body>
-        <form>
-            <input type="submit" name="sighnup-submit" class="logbtn" value="Continue">
+        <form action="includes/pre_notifHPV.php" method="post" class="sighnup-form">
+            <input type="submit" name="sighnup-submit" class="logbtn" value="HEP AB 1">
         </form>   
         
-        <form>
-            <input type="submit" name="sighnup-submit" class="logbtn" value="Continue">
+        <form action="includes/email_test.php" method="post" class="sighnup-form">
+            <input type="submit" name="sighnup-submit" class="logbtn" value="HEP AB 2">
         </form>   
 
         <form>
-            <input type="submit" name="sighnup-submit" class="logbtn" value="Continue">
+            <input type="submit" name="sighnup-submit" class="logbtn" value="HPV 1">
         </form>   
 
         <form>
-            <input type="submit" name="sighnup-submit" class="logbtn" value="Continue">
+            <input type="submit" name="sighnup-submit" class="logbtn" value="HPV 2">
+        </form>   
+
+        <form>
+            <input type="submit" name="sighnup-submit" class="logbtn" value="Screening 1">
+        </form>   
+
+        <form>
+            <input type="submit" name="sighnup-submit" class="logbtn" value="Screening 2">
         </form>   
 
     </body>
