--- a/notification_test.html
+++ b/notification_test.html
@@ -27,11 +27,11 @@
   
   </head>
 <body>
-        <form action="includes/pre_notifHPV.php" method="post" class="sighnup-form">
+        <form action="includes/pre_notifHEP.php" method="post" class="sighnup-form1">
             <input type="submit" name="sighnup-submit" class="logbtn" value="HEP AB 1">
         </form>   
         
-        <form action="includes/email_test.php" method="post" class="sighnup-form">
+        <form action="includes/post_notifHEP.php" method="post" class="sighnup-form2">
             <input type="submit" name="sighnup-submit" class="logbtn" value="HEP AB 2">
         </form>   
 
@@ -43,7 +43,7 @@
             <input type="submit" name="sighnup-submit" class="logbtn" value="HPV 2">
         </form>   
 
-        <form>
+        <form action="includes/notifScreening.php" method="post" class="sighnup-form5"> 
             <input type="submit" name="sighnup-submit" class="logbtn" value="Screening 1">
         </form>   
 
